# sfml-sandbox

./: .gitignore  CMakeLists.txt  README.md
config/: Window.cfg
src/: Constants.hpp  Main.cpp
src/Classes/: Game.cpp
src/Headers/: Game.hpp
src/Structs/: Tile.hpp
